# ComputerGraphics-HW

./: .gitignore  README.md
final/: CMakeLists.txt  README.md
final/src/: app.cpp  app.hpp  camera.cpp  camera.hpp  character.cpp  character.hpp  item.cpp  item.hpp  main.cpp  maze.cpp  maze.hpp  menu.cpp  menu.hpp  option.hpp  scene.cpp  scene.hpp  timer.cpp
final/src/item/: door.cpp  door.hpp  key.cpp  key.hpp  light_ball.cpp  light_ball.hpp
final/src/shader/: base_shader.hpp  skybox.cpp
final/src/shader/glsl/: scene_geo_shader.fs  scene_light_shader.fs
hw0/: CMakeLists.txt  README.md  app.cpp  app.hpp  global.hpp  shader.cpp  shader.hpp  shape.cpp  shape.hpp
hw0.5/: CMakeLists.txt  README.md
hw0.5/src/: BlankScreenSDL.cpp  Cube3D.cpp  CubeLit.cpp  CubeLit1VBO.cpp  ModelLoad.cpp  ModelLoadNew.cpp  TriangleColored.cpp  TriangleColoredNew.cpp
hw0/src/: app.cpp  main.cpp  shape.cpp
hw0_demo/: CMakeLists.txt  README.md  Square.cpp
hw1/: CMakeLists.txt  README.md  extra.hpp  image.cpp  image.h  main.cpp  pixel.h
hw1/doc/: out.px
hw1/src/: README.md  main.cpp  pixel.cpp
hw2/: CMakeLists.txt  README.md  interest.scn
hw2/scenes/: spheres1.scn  spheres2.scn  spot_sphere.scn
hw2/src/: main.cpp  object.cpp  object.hpp  scene.cpp  scene.hpp  util.hpp  window.cpp  window.hpp
hw3/: CMakeLists.txt  README.md
hw3/scenes/complex/: dragon.scn  dragon_front.scn  test.scn
hw3/scenes/custom/: Penrose.scn  ball_in_ball.scn  checkerboard_texture.scn  dragon_bvh.scn  geometry_demo.scn  knot.scn  material_demo.scn  procedural_texture.scn  ring_disk_plane.scn  soft_shadow.scn  spheres1.scn  spheres12.scn  spheres2.scn  teapot.scn  test.scn  transformation_demo.scn  triangle.scn
hw3/scenes/sphere/: ambient_sphere.scn  spheres1.scn  spot_sphere.scn
hw3/scenes/test/: ShadowTest.txt  arm-reach.txt  arm-top.txt  bottle-nolabel.txt  bottle.txt  gear.txt
hw3/scenes/triangle/: outdoor.scn  test_reasonable.scn  triangle.scn
hw3/src/: gpu_creator.cu  gpu_creator.hpp  main.cpp  object.hpp  parser.cpp  parser.hpp  scene.cpp  scene.cu  scene.hpp  trace.cpp  trace.cu  trace.cuh  trace.hpp  util.hpp  window.cpp  window.hpp
hw3/src/object/: base_object.cpp  base_object.cu  base_object.hpp  geometry.hpp  light.hpp  material.hpp  structure.hpp
hw3/src/object/geometry/: base_geometry.cpp  base_geometry.cu  base_geometry.hpp  box.cu  box.hpp  cone.cu  cone.hpp  cylinder.cu  cylinder.hpp  disk.cu  disk.hpp  ellipsoid.cu  ellipsoid.hpp  normal_triangle.cu  normal_triangle.hpp  plane.cu  plane.hpp  quadric.cu  quadric.hpp  ring.cu  ring.hpp  sphere.cu  sphere.hpp  triangle.cu  triangle.hpp
hw3/src/object/light/: area_light.cu  area_light.hpp  base_light.cpp  base_light.hpp  directional_light.cu  directional_light.hpp  light.cu  light.hpp  point_light.cu  point_light.hpp  spot_light.cu  spot_light.hpp
hw3/src/object/material/: base_material.cpp  base_material.cu  base_material.hpp  brick_material.cu  brick_material.hpp  checkerboard_material.cu  checkerboard_material.hpp  texture_material.cu  texture_material.hpp  uniform_material.cu  uniform_material.hpp
hw3/src/object/structure/: base_structure.hpp  bound_box.cu  bound_box.hpp  bvh.cu  bvh.hpp
hw3/src/object/structure/New Folder/: bvh.cu  bvh.hpp
hw3/src/util/: cuda.hpp  math_constant.hpp  random.hpp  vec3.hpp
hw4/: CMakeLists.txt  README.md
hw4/asset/model/: sphere2.mtl
hw4/src/: app.cpp  app.hpp  camera.cpp  camera.hpp  character.cpp  character.hpp  glfw.cpp  glfw.hpp  global.hpp  item.cpp  item.hpp  main.cpp  maze.cpp  maze.hpp  mesh.hpp  opengl.hpp  option.cpp  option.hpp  resource.hpp  scene.cpp  scene.hpp  timer.hpp
hw4/src/item/: door.cpp  door.hpp  key.cpp  key.hpp
hw4/src/shader/: base_shader.cpp  base_shader.hpp  rectangle.cpp  skybox.cpp  text.cpp  text.hpp
hw4/src/shader/glsl/: cube_skybox.fs  lamp_shader.fs  lamp_shader.vs  orth_rectangle_with_gaussian.fs  orth_rectangle_with_gaussian.vs  scene_shader.fs  scene_shader.vs  text_shader.fs  text_shader.vs
